# mouffette-copy-2

./: .gitignore  ARCHITECTURE_CRITIQUE.md  CHANGES_IMPLEMENTED.md  CONFORMANCE_IMPROVEMENTS.md  CONFORMITY_REPORT.md  DIRECTIONAL_SESSIONS_FIX.md  DIRECTIONAL_SESSION_FIX.md  EDITING_MODE_RASTERIZATION_ANALYSIS.md  FADE_ANIMATION_ANALYSIS.md  FREEZE_ZONES_IMPLEMENTATION_PLAN.md  FRONTEND_BACKEND_SEPARATION.md  ID_TERMINOLOGY.md  MAINWINDOW_REFACTORING_PLAN.md  MIGRATION_STATUS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE_14_ANALYSIS.md  PROJECT_RESTRUCTURE_PROPOSAL.md  RAPPORT_SUPPRESSION_FICHIERS.md  README.md  RECONNECTION_TEST_SCENARIOS.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_STATUS.md  REFACTORING_PROGRESS.md  REFACTORING_STATUS.md  REMOTE_TEXT_BORDER_CROPPING_ANALYSIS.md  SYSTEM_IDENTIFICATION_REPORT.md  VIDEO_RENDERING_ANALYSIS.md  build instructions.md  start.sh
client/: CLIENT_ARCHITECTURE_REPORT.md  CMakeLists.txt  Info.plist  PALETTE_SYSTEM.md  QUICK_CANVAS_MIGRATION_PLAN.md  QUICK_CANVAS_MIGRATION_STATUS.md  QUICK_CANVAS_PROMPT_PLAYBOOK.md  README.md  build.ps1  build.sh  run.ps1  run.sh  update_includes_frontend_backend.sh
client/.github/: PULL_REQUEST_TEMPLATE.md
client/docs/: ARCHITECTURE_BOUNDARIES.md  QUICK_CANVAS_INPUT_CONTRACT.md  QUICK_CANVAS_INPUT_COORDINATOR.md  QUICK_CANVAS_INPUT_TEST_MATRIX.md  QUICK_CANVAS_PERF_DEEP_DIVE.md  QUICK_CANVAS_SELECTION_OVERLAY_ROOT_CAUSE_REPORT.md  RELEASE_CHANNELS.md  RENDERER_INCIDENT_PROTOCOL.md  text-performance-blueprint-checklist.md
client/resources/: resources.qrc
client/resources/qml/: BaseMediaItem.qml  CanvasRoot.qml  CanvasViewport.qml  ImageItem.qml  InputLayer.qml  InteractionArbiter.qml  MediaInteractionHandlers.qml  MediaLayer.qml  MediaTextOverlay.qml  MediaTopOverlay.qml  MediaVideoOverlay.qml  OverlayButton.qml  OverlaySlider.qml  QuickCanvasRoot.qml  RemoteCursor.qml  ScreenItem.qml  SelectionChrome.qml  SelectionLayer.qml  SnapGuides.qml  TextItem.qml  UiZone.qml  VideoItem.qml
client/src/: AppColors.cpp  AppColors.h  ClientInfo.cpp  ClientInfo.h  FileManager.cpp  FileManager.h  FileMemoryCache.cpp  FileWatcher.cpp  FileWatcher.h  LocalFileRepository.cpp  LocalFileRepository.h  MacCursorHider.h  MacCursorHider.mm  MacDockHider.cpp  MacDockHider.h  MacDockHider.mm  MacVideoThumbnailer.h  MacVideoThumbnailer.mm  MacWindowManager.h  MacWindowManager.mm  MainWindow.cpp  MainWindow.h  MediaItems.cpp  MediaItems.h  MediaSettingsPanel.cpp  MediaSettingsPanel.h  OverlayPanels.cpp  OverlayPanels.h  QtWaitingSpinner.cpp  QtWaitingSpinner.h  RemoteFileTracker.cpp  RemoteFileTracker.h  RemoteSceneController.cpp  RemoteSceneController.h  ResponsiveLayoutManager.cpp  ResponsiveLayoutManager.h  RoundedRectItem.h  ScreenCanvas copy.cpp  ScreenCanvas.cpp  ScreenCanvas.h  (+21 more)
client/src/backend/controllers/: CanvasSessionController.cpp  CanvasSessionController.h  TimerController.cpp  TimerController.h
client/src/backend/files/: FileManager.cpp  FileManager.h  FileMemoryCache.cpp  FileMemoryCache.h  FileWatcher.cpp  LocalFileRepository.cpp  Theme.cpp  Theme.h
client/src/backend/handlers/: ClientListEventHandler.cpp  ClientListEventHandler.h  ScreenEventHandler.cpp  ScreenEventHandler.h  UploadEventHandler.cpp  UploadEventHandler.h  WebSocketMessageHandler.cpp
client/src/backend/network/: RemoteFileTracker.cpp  UploadManager.cpp  UploadManager.h  WatchManager.cpp  WatchManager.h  WebSocketClient.cpp  WebSocketClient.h
client/src/controllers/: CanvasSessionController.cpp  TimerController.cpp
client/src/core/: AppColors.cpp
client/src/domain/media/: MediaItems.cpp  MediaItems.h  MediaSettingsPanel.cpp
client/src/domain/models/: ClientInfo.cpp  ClientInfo.h
client/src/domain/session/: SessionManager.cpp  SessionManager.h
client/src/files/: FileManager.cpp  FileMemoryCache.cpp  FileWatcher.cpp  LocalFileRepository.cpp  Theme.cpp
client/src/frontend/handlers/: UploadSignalConnector.cpp  UploadSignalConnector.h  WindowEventHandler.cpp
client/src/handlers/: ClientListEventHandler.cpp  ScreenEventHandler.cpp  ScreenEventHandler.h  UploadEventHandler.cpp  UploadEventHandler.h  UploadSignalConnector.cpp  WebSocketMessageHandler.cpp  WebSocketMessageHandler.h  WindowEventHandler.cpp  WindowEventHandler.h
client/src/managers/: ClientListBuilder.cpp  ClientListBuilder.h  ConnectionManager.cpp  ConnectionManager.h  MenuBarManager.cpp  RemoteClientInfoManager.cpp  RemoteClientInfoManager.h  SettingsManager.cpp  SettingsManager.h  SystemMonitor.cpp  SystemTrayManager.cpp  SystemTrayManager.h  ThemeManager.cpp  ThemeManager.h  TopBarManager.cpp  TopBarManager.h  UploadButtonStyleManager.cpp
client/src/managers/app/: MenuBarManager.cpp  MenuBarManager.h  SettingsManager.cpp  SystemTrayManager.cpp
client/src/managers/network/: ClientListBuilder.cpp  ClientListBuilder.h  ConnectionManager.cpp
client/src/managers/system/: SystemMonitor.cpp  SystemMonitor.h
client/src/managers/ui/: RemoteClientInfoManager.cpp  RemoteClientInfoManager.h  TopBarManager.cpp  UploadButtonStyleManager.cpp
client/src/network/: RemoteFileTracker.cpp  UploadManager.cpp  WatchManager.cpp  WatchManager.h  WebSocketClient.cpp  WebSocketClient.h
client/src/platform/macos/: MacVideoThumbnailer.h  MacVideoThumbnailer.mm  MacWindowManager.h  MacWindowManager.mm
client/src/platform/windows/: WindowsVideoThumbnailer.cpp
client/src/rendering/canvas/: OverlayPanels.cpp  OverlayPanels.h  ScreenCanvas.cpp  ScreenCanvas.h
client/src/rendering/navigation/: ScreenNavigationManager.cpp
client/src/ui/: StyleConfig.h
client/tests/baseline/: run_baseline_checks.js  run_phase2_interaction_ownership.js  run_phase2_interaction_parity.js  run_phase2_interaction_runtime_matrix.js  run_phase4_perf_delta.js  run_phase4_visual_parity.js  run_phase7_integration_hardening.js  run_phase8_randomized_input_sequences.js  run_quick_canvas_gate_report.js
client/tools/: architecture_screen_canvas_allowlist.txt  check_architecture_boundaries.sh  input_perf_budget.json  run_input_smoke_checks.ps1  text_perf_summary.py
client/ui/: MainWindow.ui
(+165 files in other folders)
